<resources>
    <string name="app_name">lifecounter</string>
    <string name="player1">Player 1:</string>
    <string name="player2">Player 2:</string>
    <string name="player3">Player 3:</string>
    <string name="player4">Player 4:</string>
    <string name="plus">+</string>
    <string name="plus5">+5</string>
    <string name="minus">-</string>
    <string name="minus5">-5</string>

    <string name="player1_life">20</string>
    <string name="player2_life">20</string>
    <string name="player3_life">20</string>
    <string name="player4_life">20</string>
</resources>